--- a/PROFILE.HTML
+++ b/PROFILE.HTML
@@ -24,7 +24,7 @@
         THIS IS MY FIRST WEB PAGE
     </p>
     <p class="description">
-        AND THE photographeY IS MY PASSION
+        and the photographe is my passion
     </p>
 
     
